src/test/compile-fail/arg-count-mismatch.rs
fn f(int x) -> () {
}

fn main() -> () {
  let () i;
  i = f();
}
